# sandbox2D

./: CMakeLists.txt  LICENSE
include/game/: Config.h  Game.h  GameState.h  Player.h
include/game/graphics/: Renderer.h
include/game/input/: InputManager.h
include/game/physics/: BoundingBox.h  DynamicBody.h  PhysicsWorld.h  RigidBody.h  Vec2.h
include/game/resources/: Sprite.h  TextureManager.h
include/game/world/: World.h
include/platform/: Graphics.h  InputSource.h
include/platform/sdl/: AssetLoader.h  GraphicsDevice.h  InputSource.h  Resource.h  SDLContext.h
src/: main.cpp
src/core/: CONST.h  GameConstants.h  GameState.cpp  GameState.h  Graphics.cpp  Graphics.h  Sprite.cpp  Sprite.h  ioevents.h
src/core/physics/: Vec2.h
src/core/resources/: TextureManager.cpp  TextureManager.h
src/core/world/: World.cpp  World.h
src/game/: Config.h  Game.cpp  GameState.h  Player.cpp
src/game/graphics/: Renderer.cpp
src/game/input/: InputManager.cpp
src/game/resources/: TextureManager.cpp  TextureManager.h
src/game/world/: World.cpp  World.h
src/platform/: Graphics.cpp  Graphics.h  InputSource.cpp  ioevents.h  main.cpp
src/platform/sdl/: AssetLoader.cpp  GraphicsDevice.cpp  InputSource.cpp
